--- a/src/main/resources/fxml/InteractiveMap.fxml
+++ b/src/main/resources/fxml/InteractiveMap.fxml
@@ -6,58 +6,62 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.web.WebView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.control.skin.ProgressIndicatorSkin.IndeterminateSpinner.IndicatorPaths?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
+<?import javafx.scene.control.cell.TextFieldTreeCell?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0"
-            prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <top>
-        <HBox fx:id="topControls" alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
-                <Button fx:id="buttonZoom" text="Default zoom"/>
-                <Slider fx:id="sliderZoom" blockIncrement="1.0" majorTickUnit="7.0" max="28.0" minorTickCount="6"
-                        showTickLabels="true" showTickMarks="true" snapToTicks="true" value="14.0" HBox.hgrow="ALWAYS"/>
-            </children>
-            <padding>
-                <Insets bottom="5.0" left="10.0" right="10.0" top="5.0"/>
-            </padding>
-        </HBox>
-    </top>
+            prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="traffic.map.Controller">
     <center>
-        <MapView fx:id="mapView" BorderPane.alignment="CENTER"/>
+        <StackPane fx:id="stackPane">
+            <children>
+                <MapView fx:id="mapView" BorderPane.alignment="CENTER"/>
+                <HBox fx:id="zoomControl" alignment="TOP_RIGHT" maxWidth="120" maxHeight="50" spacing="20"
+                      onMouseEntered="#raiseOpacity" onMouseExited="#lowerOpacity">
+                    <padding>
+                        <Insets right="20.0" top="20.0"/>
+                    </padding>
+                    <Button fx:id="zoomIn" opacity="0.5" onAction="#zoomIn"/>
+                    <Button fx:id="zoomOut" opacity="0.5" onAction="#zoomOut"/>
+                </HBox>
+            </children>
+        </StackPane>
     </center>
     <bottom>
         <HBox alignment="CENTER_LEFT" spacing="5.0" BorderPane.alignment="CENTER">
-            <children>
-                <Label fx:id="labelCenter" text="Center: "/>
-                <Label fx:id="labelExtent" text="Extent: "/>
-                <Label fx:id="labelZoom" text="Zoom: "/>
-                <Label fx:id="labelEvent" text="Event: "/>
-            </children>
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
+            <Label fx:id="labelCenter" text="Center: "/>
+            <Label fx:id="labelExtent" text="Extent: "/>
+            <Label fx:id="labelZoom" text="Zoom: "/>
+            <Label fx:id="labelEvent" text="Event: "/>
         </HBox>
     </bottom>
     <left>
-        <Accordion fx:id="leftControls" BorderPane.alignment="CENTER">
-            <panes>
-                <TitledPane fx:id="optionsLocations" animated="true" text="locations">
-                    <content>
-                        <VBox spacing="10.0">
-                            <children>
-                                <Button fx:id="buttonPalace" text="Palace of Culture and Science" maxWidth="Infinity"/>
-                            </children>
-                        </VBox>
-                    </content>
+        <VBox fx:id="leftControls" BorderPane.alignment="CENTER" minWidth="200">
+            <children>
+                <TitledPane fx:id="incidentInfo" text="Incident details">
+                    <VBox spacing="5.0">
+                        <Text fx:id="incidentType" text="Incident: ---"/>
+                        <Text fx:id="incidentStreet" text="Street: ---"/>
+                    </VBox>
                 </TitledPane>
-                <TitledPane fx:id="optionsMarkers" animated="true" text="markers">
-                    <content>
-                        <VBox spacing="10.0">
-                            <children>
-                                <CheckBox fx:id="checkPalaceMarker" text="Palace of Culture and Science" maxWidth="Infinity"/>
-                            </children>
-                        </VBox>
-                    </content>
+                <TitledPane fx:id="optionsFilters" text="Filters">
+                    <VBox spacing="10.0">
+                        <Button text="Apply filters" onAction="#applyFilters" maxWidth="Infinity"/>
+                    </VBox>
                 </TitledPane>
-            </panes>
-        </Accordion>
+                <TitledPane fx:id="mapControls" text="Settings">
+                    <VBox spacing="10.0">
+                        <Button fx:id="clearButton" text="Clear map" onAction="#clearMap" maxWidth="Infinity"/>
+                    </VBox>
+                </TitledPane>
+            </children>
+        </VBox>
     </left>
 </BorderPane>
